# scl

./: .gitignore  404.html  COPYING  COPYING-CN  Cargo.toml  README.EN.md  README.md  index.html  index.original.html  mkdocs.yml  package.json  rustfmt.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: ----------bug-.md  ------feature-.md
.github/workflows/: ci.yaml  git-page.yaml
.well-known/: microsoft-identity-association.json
docs/: download.md  index.md  scl-docs.md  theme-edit.md
docs/assets/: index.css  lazy-load.js  time-stats.json
download/: index.html
layout/: layout.pug
pages/: 404.pug  download.pug  index.pug
public/: demo-download-sources.json  download.js  lazy-load.js
scl-core/: Cargo.toml  README-EN.md  README.md
scl-core/src/: client.rs  http.rs  java.rs  lib.rs  package.rs  password.rs  path.rs  prelude.rs  progress.rs  semver.rs  utils.rs
scl-core/src/auth/: authlib.rs  microsoft.rs  mod.rs  structs.rs
scl-core/src/auth/microsoft/: leagcy.rs  mod.rs
scl-core/src/download/: authlib.rs  curseforge.rs  fabric.rs  forge.rs  mcmod.rs  mod.rs  modrinth.rs  neoforge.rs  optifine.rs  quiltmc.rs  structs.rs  vanilla.rs
scl-core/src/modpack/: mod.rs  structs.rs
scl-core/src/version/: mod.rs  mods.rs  structs.rs
scl-doc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
scl-doc/scl_core/: all.html  index.html  sidebar-items.js
scl-doc/scl_core/auth/: fn.auth_mojang.html  fn.parse_head_skin.html  fn.refresh_auth.html  index.html  sidebar-items.js
scl-doc/scl_core/client/: constant.LOG4J_PATCH.html  index.html  sidebar-items.js  struct.Client.html  struct.ClientConfig.html
scl-doc/scl_core/download/: enum.DownloadSource.html  index.html  sidebar-items.js  struct.Downloader.html  trait.GameDownload.html
scl-doc/scl_core/http/: enum.RequestResult.html  fn.download.html  fn.get.html  fn.post.html  fn.retry_future.html  fn.retry_get.html  fn.retry_get_bytes.html  fn.retry_get_json.html  fn.retry_get_string.html  index.html  sidebar-items.js
scl-doc/scl_core/java/: fn.search_for_java.html  index.html  sidebar-items.js  struct.JavaRuntime.html
scl-doc/scl_core/password/: index.html  sidebar-items.js  struct.Password.html
scl-doc/scl_core/progress/: constant.NR.html  enum.ReportState.html  index.html  sidebar-items.js  trait.Reporter.html
scl-doc/scl_core/semver/: enum.MinecraftVersion.html  fn.parse_version.html  index.html  sidebar-items.js
scl-doc/scl_core/utils/: constant.CLASSPATH_SEPARATOR.html  constant.NATIVE_ARCH.html  constant.TARGET_ARCH.html  constant.TARGET_OS.html  enum.Arch.html  fn.get_data_sha1.html  fn.get_exec_arch.html  fn.get_full_path.html  fn.get_mem_status.html  fn.locate_path.html  index.html  sidebar-items.js  static.NATIVE_ARCH_LAZY.html  struct.MemoryStatus.html
scl-doc/scl_core/version/: enum.LoadVersionInfoError.html  enum.VersionType.html  fn.get_avaliable_versions.html  index.html  sidebar-items.js  struct.Version.html
scl-doc/scl_gui_animation/: all.html  fn.round.html  index.html  sidebar-items.js  struct.Spring.html  struct.Spring2D.html
scl-doc/scl_gui_animation/spring/: fn.round.html  struct.Spring.html  struct.Spring2D.html
scl-doc/scl_gui_animation/tween/: fn.ease_in_circ.html  fn.ease_in_expo.html  fn.ease_inout_circ.html  fn.ease_out_circ.html  fn.ease_out_expo.html  index.html  sidebar-items.js
scl-doc/scl_gui_widgets/: all.html  index.html  sidebar-items.js  trait.WidgetExt.html
scl-doc/scl_gui_widgets/theme/: index.html  sidebar-items.js
scl-doc/scl_gui_widgets/utils/: index.html  sidebar-items.js
scl-doc/scl_gui_widgets/widget_ext/: trait.WidgetExt.html
scl-doc/scl_gui_widgets/widgets/: constant.ADD_MAX_PROGRESS.html  constant.ADD_PROGRESS.html  constant.BACK_PAGE_CLICKED.html  constant.CLEAR_BACKGROUND_IMAGE.html  constant.ENABLE_BACK_PAGE.html  constant.HIDE_PROGRESS.html  constant.NEW_PROGRESS.html  constant.ON_PAGE.html  constant.POP_PAGE.html  constant.PUSH_PAGE.html  constant.QUERY_CLOSE_WINDOW.html  constant.QUERY_POP_PAGE.html  constant.REMOVE_PROGRESS.html  constant.SET_BACKGROUND_IMAGE.html  constant.SET_MAX_PROGRESS.html  constant.SET_MESSAGE.html  constant.SET_PROGRESS.html  constant.SET_SLIDE_PAGE_ANIMATION.html  constant.SET_SUB_MESSAGE.html  enum.KnobStyle.html  index.html  sidebar-items.js  struct.Annotated.html  struct.AutoFocus.html  struct.Button.html  struct.CreateItem.html  struct.DownloadModuleItem.html  struct.DynImage.html  struct.FolderList.html  struct.Icon.html  struct.IconButton.html  struct.LargeListItem.html  struct.ListItem.html  struct.ListSelect.html  struct.MenuItem.html  struct.NavigationControl.html  struct.OnChange.html  struct.OnCmd.html  struct.OnMonitor.html  struct.OnNotify.html  (+16 more)
scl-doc/scl_macro/: all.html  index.html  macro.icons_def!.html  macro.icons_def.html  sidebar-items.js
scl-doc/scl_webview/: all.html  fn.is_supported.html  index.html  sidebar-items.js  struct.WebView.html  type.DynResult.html
scl-doc/src/scl_core/: client.rs.html  http.rs.html  java.rs.html  lib.rs.html  package.rs.html  password.rs.html  path.rs.html  prelude.rs.html  progress.rs.html  semver.rs.html  utils.rs.html
scl-doc/src/scl_gui_animation/: lib.rs.html  spring.rs.html  tween.rs.html
scl-docs/: index.html
scl-gui-animation/: Cargo.toml
scl-gui-animation/src/: lib.rs
scl-gui-widgets/: Cargo.toml  README.md
scl-gui-widgets/src/: lib.rs  widget_ext.rs
scl-gui-widgets/src/theme/: color.rs
scl-gui-widgets/src/widgets/: common.rs  create_item.rs  download_module_item.rs  folder.rs  icon_button.rs  large_list_item.rs  list_item.rs  list_select.rs  menu_item.rs  mod.rs  on_monitor.rs  on_notify.rs  page_switcher.rs  progress.rs  progress_overlay.rs  show_if.rs  slider.rs  start_button.rs  store.rs  toggle_switch.rs  window.rs
scl-macro/: Cargo.toml
scl-macro/src/: icons.rs  lib.rs
scl-webview/: Cargo.toml  README.md
scl-webview/src/: lib.rs
scripts/: build.js  dev.js
search/: search_index.json
styles/: index.styl
stylesheets/: main.css
theme-edit/: index.html
(+369 files in other folders)
