[package]
name = "scl-core"
description = "A fully featured minecraft launcher core."
version = "1.0.2"
authors = ["Steve-xmh <stevexmh@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
base64 = "^0.13"
futures = "^0.3.21"
surf = { version = "^2.3", default-features = false, features = [ "curl-client" ] }
image = { version = "^0.24", default-features = false, features = ["jpeg", "png", "gif", "bmp", "rgb"] }
webp = "^0.2"
log = { version = "^0.4", features = ["release_max_level_off"] }
nom = "^7.1"
once_cell = "^1.7"
path-absolutize = "^3.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sha1_smol = { version = "^1.0", features = ["std"] }
shell-words = "^1.0"
smol = "^1.2"
toml = "^0.5"
url = "^2.2"
urlencoding = "^2.1"
uuid = { version = "1.0.0", features = ["v4"] }
zip = "^0.6.2"
dirs = "^4.0"
async-trait = "^0.1"
shellwords = "1.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "^0.10"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.39"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "macos")'.dependencies]
libc = "*"
# nix = { version =  "*", features = ["feature"] }
