[package]
name = "scl-gui-animation"
version = "0.1.0"
edition = "2021"
description = "Some math methods that can be used in performing gui animations. (Highly unstable and all in Chinese!)"
homepage = "https://github.com/Steve-xmh/scl"
repository = "https://github.com/Steve-xmh/scl"
license = "LGPL-3.0-only with static-linking-expection"
readme = "README.md"
authors = ["Steve-xmh <stevexmh@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
