[package]
name = "scl-gui-widgets"
version = "1.0.0"
edition = "2021"
description = "WinUI-style Druid widgets for SCL. (Highly unstable and all in Chinese!)"
homepage = "https://github.com/Steve-xmh/scl"
repository = "https://github.com/Steve-xmh/scl"
license = "LGPL-3.0-only"
readme = "README.md"
authors = ["Steve-xmh <stevexmh@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scl-gui-animation = { path = "../scl-gui-animation" }
scl-macro = { path = "../scl-macro" }

druid = { git = "https://github.com/linebender/druid.git", features = ["im", "serde", "raw-win-handle"] }
window-shadows = "*"
window-vibrancy = "*"
raw-window-handle-5 = { package = "raw-window-handle", version = "0.5.0" }
serde = { version = "1.0", features = ["derive"] }
tracing = "*"
taskbar_interface = { git = "https://github.com/Steve-xmh/taskbar_interface.git" }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "*"
cocoa = "*"
libc = "*"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "*", features = ["processthreadsapi", "winuser", "libloaderapi"] }
