[package]
name = "scl-webview"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "^1.0" }
once_cell = "^1.7"

[target.'cfg(target_os = "windows")'.dependencies]
webview2 = "^0.1"
winapi = { version = "*", features = ["winuser", "libloaderapi", "synchapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "*"
dispatch = "*"
objc = { version = "*", features = ["exception"] }
cocoa = "*"
core-foundation = "*"
core-graphics = "*"
darwin-webkit = "*"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "*"
gdk = "*"
glib = "*"
webkit2gtk = "*"
