[package]
name = "scl-webview"
version = "1.0.0"
edition = "2021"
description = "Simple WebView library for legacy account authorization of SCL. (Highly unstable and all in Chinese!)"
homepage = "https://github.com/Steve-xmh/scl"
repository = "https://github.com/Steve-xmh/scl"
license = "LGPL-3.0-only"
readme = "README.md"
authors = ["Steve-xmh <stevexmh@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "^1.0" }
once_cell = "^1.7"

[target.'cfg(target_os = "windows")'.dependencies]
webview2 = "^0.1"
winapi = { version = "*", features = ["winuser", "libloaderapi", "synchapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "*"
dispatch = "*"
objc = { version = "*", features = ["exception"] }
cocoa = "*"
core-foundation = "*"
core-graphics = "*"
darwin-webkit = "*"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "*"
gdk = "*"
glib = "*"
webkit2gtk = "*"
